# TextTransform2

./: CMakeLists.txt  README.md  TextTransform2.cpp  TextTransform2_res.rc
